Make components optional (#344)
* Fix installation of .cmake files
* Implement component selection in CMake

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,11 +52,13 @@ jobs:
       - name: Build the code in CUDA mode
         shell: bash -el {0}
         run: |
-          cmake -DCUDAWRAPPERS_BUILD_TESTING=True -S . -B build
+          cmake -DCUDAWRAPPERS_BUILD_TESTING=True -S . -B build -DCMAKE_INSTALL_PREFIX=install
           make -C build -j
+          make -C build install
 
       - name: Build the code in HIP mode
         shell: bash -el {0}
         run: |
-          cmake -DCUDAWRAPPERS_BUILD_TESTING=True -DCUDAWRAPPERS_BACKEND=HIP -DAMDGPU_TARGETS=gfx1101 -S . -B build
+          cmake -DCUDAWRAPPERS_BUILD_TESTING=True -DCUDAWRAPPERS_BACKEND=HIP -DAMDGPU_TARGETS=gfx1101 -S . -B build -DCMAKE_INSTALL_PREFIX=install
           make -C build -j
+          make -C build install
