--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,47 @@ else()
   )
 endif()
 
+# Set the components to build. cu should always be built, the rest are optional.
+set(CUDAWRAPPERS_ALL_COMPONENTS cu cufft nvml nvrtc nvtx)
+set(CUDAWRAPPERS_MANDATORY_COMPONENTS cu)
+set(CUDAWRAPPERS_DEFAULT_COMPONENTS cu nvrtc)
+
+set(CUDAWRAPPERS_COMPONENTS
+    "${CUDAWRAPPERS_DEFAULT_COMPONENTS}"
+    CACHE STRING "List of components to build"
+)
+
+# If 'all' is specified, set to all known components
+list(FIND CUDAWRAPPERS_COMPONENTS "all" _found)
+if(_found GREATER -1)
+  set(CUDAWRAPPERS_COMPONENTS ${CUDAWRAPPERS_ALL_COMPONENTS})
+endif()
+
+# If HIP backend is used, remove NVML
+if(CUDAWRAPPERS_BACKEND_HIP)
+  message(WARNING "HIP backend is used, removing nvml component.")
+  list(REMOVE_ITEM CUDAWRAPPERS_COMPONENTS nvml)
+endif()
+
+# Make sure the mandatory components are always built
+foreach(mandatory ${CUDAWRAPPERS_MANDATORY_COMPONENTS})
+  list(FIND CUDAWRAPPERS_COMPONENTS "${mandatory}" _found)
+  if(_found EQUAL -1)
+    list(APPEND CUDAWRAPPERS_COMPONENTS "${mandatory}")
+  endif()
+endforeach()
+
+# Add helper variable for each component to indicate if it should be built
+foreach(component ${CUDAWRAPPERS_ALL_COMPONENTS})
+  string(TOUPPER "${component}" COMPONENT_UPPER)
+  list(FIND CUDAWRAPPERS_COMPONENTS "${component}" _found_index)
+  if(_found_index GREATER -1)
+    set(CUDAWRAPPERS_BUILD_${COMPONENT_UPPER} ON)
+  else()
+    set(CUDAWRAPPERS_BUILD_${COMPONENT_UPPER} OFF)
+  endif()
+endforeach()
+
 if(${CUDAWRAPPERS_BACKEND_HIP})
   enable_language(HIP)
   set(CMAKE_HIP_COMPILER_ENV_VAR "HIPCXX")
@@ -65,6 +106,20 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 # Include CMake helper functions
 include(cmake/cudawrappers-helper.cmake)
 
+# You can use cudawrappers by installing it, or by including it in your project
+set(CUDAWRAPPERS_INSTALLED ${CMAKE_PROJECT_NAME} STREQUAL cudawrappers)
+
+# Check if the dependencies are satisfied This may update the
+# CUDAWRAPPERS_COMPONENTS variable if some components are not available (e.g.
+# hipfft).
+include(cmake/cudawrappers-dependencies.cmake)
+
+# Update the final list of components in the cache
+set(CUDAWRAPPERS_COMPONENTS
+    ${CUDAWRAPPERS_COMPONENTS}
+    CACHE STRING "List of components to build" FORCE
+)
+
 # Configure tests
 if(CUDAWRAPPERS_BUILD_TESTING)
   include(CTest)
@@ -75,12 +130,6 @@ if(CUDAWRAPPERS_BUILD_TESTING)
   add_link_options("--coverage")
   add_subdirectory(tests)
 endif()
-
-# You can use cudawrappers by installing it, or by including it in your project
-set(CUDAWRAPPERS_INSTALLED ${CMAKE_PROJECT_NAME} STREQUAL cudawrappers)
-
-# Check if the dependencies are satisfied
-include(cmake/cudawrappers-dependencies.cmake)
 
 # Create the component libraries
 include(cmake/cudawrappers-targets.cmake)
@@ -113,12 +162,12 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
   )
 
   install(
-    FILES
-      ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake
-      ${CMAKE_CURRENT_BINARY_DIR}/cudawrappers-config.cmake
-      ${CMAKE_CURRENT_SOURCE_DIR}/cmake/cudawrappers-helper.cmake
-      ${CMAKE_CURRENT_SOURCE_DIR}/cmake/cudawrappers-dependencies.cmake
-      ${CMAKE_CURRENT_SOURCE_DIR}/cmake/cudawrappers-inline-local-includes.cmake
+    FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake
+          ${CMAKE_CURRENT_BINARY_DIR}/cudawrappers-config.cmake
+          ${CMAKE_CURRENT_SOURCE_DIR}/cmake/cudawrappers-helper.cmake
+          ${CMAKE_CURRENT_SOURCE_DIR}/cmake/cudawrappers-dependencies.cmake
+          ${CMAKE_CURRENT_SOURCE_DIR}/cmake/inline-common.cmake
+          ${CMAKE_CURRENT_SOURCE_DIR}/cmake/inline-local-includes.cmake
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
   )
 
