Add support for NVTX 3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,11 @@ set(CUDAWRAPPERS_INSTALLED ${CMAKE_PROJECT_NAME} STREQUAL cudawrappers)
 # hipfft).
 include(cmake/cudawrappers-dependencies.cmake)
 
+# NVTX 2 is deprecated since CUDA 12.8, so we use NVTX 3 instead
+if(CUDAToolkit_VERSION VERSION_GREATER_EQUAL "12.8")
+  set(CUDAWRAPPERS_USE_NVTX3 True)
+endif()
+
 # Update the final list of components in the cache
 set(CUDAWRAPPERS_COMPONENTS
     ${CUDAWRAPPERS_COMPONENTS}
