--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,10 +120,14 @@ set(CUDAWRAPPERS_INSTALLED ${CMAKE_PROJECT_NAME} STREQUAL cudawrappers)
 include(cmake/cudawrappers-dependencies.cmake)
 
 # NVTX 2 is deprecated since CUDA 12.8, so we use NVTX 3 instead
-set(CUDAWRAPPERS_USE_NVTX3 False)
-if(CUDAToolkit_VERSION VERSION_GREATER_EQUAL "12.8")
+if(CUDAToolkit_VERSION VERSION_GREATER_EQUAL "12.8" AND CUDAWRAPPERS_BUILD_NVTX)
   set(CUDAWRAPPERS_USE_NVTX3 True)
 endif()
+set(CUDAWRAPPERS_CONFIG_FILE "${CMAKE_CURRENT_SOURCE_DIR}/include/cudawrappers/config.h")
+configure_file(
+  cmake/cudawrappers-config.h.in
+  ${CUDAWRAPPERS_CONFIG_FILE})
+install(FILES ${CUDAWRAPPERS_CONFIG_FILE} DESTINATION include/cudawrappers)
 
 # Update the final list of components in the cache
 set(CUDAWRAPPERS_COMPONENTS
