Reimplement findIncludePaths with CUDAToolkit_INCLUDE_DIRS

--- a/cmake/cudawrappers-config.h.in
+++ b/cmake/cudawrappers-config.h.in
@@ -1,4 +1,5 @@
 #ifndef CUDAWRAPPERS_CONFIG_H
 #define CUDAWRAPPERS_CONFIG_H
+#define CUDA_INCLUDE_DIRS "@CUDAToolkit_INCLUDE_DIRS@"
 #cmakedefine CUDAWRAPPERS_USE_NVTX3
 #endif // CUDAWRAPPERS_CONFIG_H
